2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	* 

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-03-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: [Bug #3235340]: Provide empty string as default
	* uri.man: value for the fragment in an http url. Ensure that
	* uri.tcl: a fragment after a query is properly split off, and
	* uri.test: joined. Extended testsuite. Bumped to version 1.2.2.

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-03-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* urn-scheme.man: Added documentation for package uri::urn.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uri.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2007-01-11  Andreas Kupries  <andreask@activestate.com>

	* uri.tcl (::uri::SplitHttp): [SF Tcllib Bug 1610655]. Modified to
	* uri.man: slash of queries after the first question mark, not the
	* uri.test: last. We have queries with subqueries in the wild,
	* pkgIndex.tcl: bogus per the spec, but in use. Version has been
	  bumped to 1.2.1.
